# src/Modules/SamarPlanner.Task.Infrastructure/Repositories/TaskRepository.cs
@@ -8,8 +8,17 @@ public class TaskRepository(TaskDbContext context) : ITaskRepository
 {
     public async Task<bool> CreateAsync(Core.Entities.Task task, CancellationToken cancellationToken = default)
     {
-        context.Add(task);
-        return await context.SaveChangesAsync(cancellationToken) > 0;
+        try
+        {
+            context.Add(task);
+            await context.SaveChangesAsync(cancellationToken);
+            return true;
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            return false;
+        }
     }
 
     public async Task<Core.Entities.Task?> GetAsTrackingAsync(Guid taskId, Guid userId,
@@ -62,49 +71,73 @@ public class TaskRepository(TaskDbContext context) : ITaskRepository
 
     public async Task<bool> UpdateAsync(Core.Entities.Task task, CancellationToken cancellationToken = default)
     {
-     //   context.Update(task);
-        return await context.SaveChangesAsync(cancellationToken) > 0;
+        try
+        {
+             await context.SaveChangesAsync(cancellationToken);
+             return true;
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
+            return false;
+        }
     }
 
     public async Task<bool> DeleteTaskWithOccurrencesWithOutFilterAsync(Guid taskId, Guid userId,
         CancellationToken cancellationToken = default)
     {
-        var taskExists = await context.Tasks
-            .IgnoreQueryFilters()
-            .AnyAsync(t => t.Id == taskId && t.UserId == userId, cancellationToken);
-    
-        if (!taskExists)
+        try
+        {
+            var taskExists = await context.Tasks
+                .IgnoreQueryFilters()
+                .AnyAsync(t => t.Id == taskId && t.UserId == userId, cancellationToken);
+
+            if (!taskExists)
+                return false;
+
+            await context.TaskOccurrences
+                .IgnoreQueryFilters()
+                .Where(o => o.TaskId == taskId)
+                .ExecuteDeleteAsync(cancellationToken);
+
+            var deleted = await context.Tasks
+                .IgnoreQueryFilters()
+                .Where(t => t.Id == taskId && t.UserId == userId)
+                .ExecuteDeleteAsync(cancellationToken);
+
+            return deleted > 0;
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
             return false;
-
-        await context.TaskOccurrences
-            .IgnoreQueryFilters()
-            .Where(o => o.TaskId == taskId)
-            .ExecuteDeleteAsync(cancellationToken);
-
-        var deleted = await context.Tasks
-            .IgnoreQueryFilters()
-            .Where(t => t.Id == taskId && t.UserId == userId)
-            .ExecuteDeleteAsync(cancellationToken);
-
-        return deleted > 0;
+        }
     }
 
     public async Task<bool> DeleteOccurrencesWithOutFilterAsync(Guid taskId, Guid userId, DateOnly date,
         CancellationToken cancellationToken = default)
     {
-        var taskExists = await context.Tasks
-            .IgnoreQueryFilters()
-            .AnyAsync(t => t.Id == taskId && t.UserId == userId, cancellationToken);
-    
-        if (!taskExists)
+        try
+        {
+            var taskExists = await context.Tasks
+                .IgnoreQueryFilters()
+                .AnyAsync(t => t.Id == taskId && t.UserId == userId, cancellationToken);
+
+            if (!taskExists)
+                return false;
+
+            var deleted = await context.TaskOccurrences
+                .IgnoreQueryFilters()
+                .Where(o => o.TaskId == taskId && o.Date == date)
+                .ExecuteDeleteAsync(cancellationToken);
+
+            return deleted > 0;
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e);
             return false;
-
-        var deleted = await context.TaskOccurrences
-            .IgnoreQueryFilters()
-            .Where(o => o.TaskId == taskId && o.Date == date)
-            .ExecuteDeleteAsync(cancellationToken);
-
-        return deleted > 0;
+        }
     }
 
     public async Task<List<Core.Entities.Task>> GetWithOccurrencesAndRepeatPatternAsync(Guid userId, DateOnly from,
@@ -119,6 +152,14 @@ public class TaskRepository(TaskDbContext context) : ITaskRepository
             ))
             .Include(t => t.RepeatPattern)
             .Include(t => t.Occurrences.Where(o => o.Date >= from && o.Date <= to))
+            .ToListAsync(cancellationToken);
+    }
+
+    public async Task<List<Core.Entities.Task>> GetDeletedTasksAsync(Guid userId, CancellationToken cancellationToken = default)
+    {
+        return await context.Tasks.AsNoTracking()
+            .IgnoreQueryFilters()
+            .Where(t => t.UserId == userId && t.SoftDeleted == true)
             .ToListAsync(cancellationToken);
     }
 }
